@@ -20,14 +20,14 @@
     <template name="declaration">wxMenu* $name;</template>
     <template name="construction">$name = new wxMenu();</template>
     <template name="include">@#include &lt;wx/menu.h&gt;</template>
-    <template name="menu_add">#parent $name->Append( $name, $label );</template>
+    <template name="after_addchild">#parent $name->Append( $name, $label );</template>
   </templates>
 
   <templates class="submenu">
     <template name="declaration">wxMenu* $name;</template>
     <template name="construction">$name = new wxMenu();</template>
     <template name="include">@#include &lt;wx/menu.h&gt;</template>
-    <template name="menu_add">#parent $name->Append( -1, $label, $name );</template>
+    <template name="after_addchild">#parent $name->Append( -1, $label, $name );</template>
   </templates>
 
   <templates class="wxMenuItem">
