@@ -8,6 +8,7 @@ date Version 3.00.33 (Beta 3)
 + Implemented FS#160 — "Support for namespaces for subclass forward declarations"
    using patch supplied by kramar.
 * Fixed FS#161 — "Tag of items in wxCheckListBox."
+^ Moved declaration of menus and submenus to header file.
 
 03-07-2007 Version 3.00.32 (Beta 3)
 ^ New way to save propgrid values when using menu or toolbar items.
